test/parser.d/valid/assignments.souc
f(x) = do
	y = 4
	return x

g(x) = do 
	y = 5
	return x
