test/parser.d/invalid/assignments.souc
y = 3

f(x) = do
	y = 4
	return x
